# Code-analyzer

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  docker-compose.yml  environment.yml  package.json  pyproject.toml  requirements.txt  setup.py
.bak/: main.py.bak
.github/ISSUE_TEMPLATE/workflows/: ci.yml
cypress/support/: commands.js  index.js
docs/: api.md  architecture.md
ml/config/: dataset_config.json  model_config.json
ml/notebooks/: exploratory_analysis.ipynb
ml/scripts/: evaluate.py  inference.py  train.py
scripts/: clean_data.py  deploy.sh  generate_configs.py
src/: __init__.py  chatgpt_integration.py  main.py
src/config/: secrets.json  settings.json  settings_loader.py
src/modules/: data_analyzer.py  example_module.py  report_generator.py
src/ui/: app.py  setup_prompt.py
src/ui/templates/: dashboard.html
src/utils/: docker_scanner.py  duplicate_finder.py  env_file_scanner.py  file_editor.py  file_structure_scanner.py  file_utils.py  logging_scanner.py  missing_logic_detector.py  ml_scanner.py  project_analyzer.py  requirements_scanner.py  security_scanner.py  testing_scanner.py
tests/: conftest.py  test_example_module.py  test_main.py
tests/e2e/: test_end_to_end_flow.py
tests/integration/: test_integration_example.py
tests/ml/: test_evaluate.py  test_inference.py  test_train.py
