# pyproject.toml

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "code-analyzer"
version = "1.0.0"
description = "A local-hosted application for analyzing code repositories."
readme = "README.md"
authors = [
    { name="Your Name", email="your_email@example.com" }
]
license = "MIT"
requires-python = ">=3.8"

# Optional: define dependencies here instead of setup.py
dependencies = [
    "Flask==2.2.5",
    "requests==2.31.0",
    # ...
]

# If you want to define entry points in TOML style:
[project.scripts]
code-analyzer = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]
